# anti-pe

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-windows-exe.yml
artifacts/latency/: LATENCY_COMPARISON.md  benign_wxc_test_proxy.json  vlc_38mb_20_runs.json  vlc_38mb_initial.json
artifacts/latency/after/: near_100mb_linux.json  near_100mb_linux_recheck.json
configs/: policy.json
docs/: CODEBASE_EXPLAINED.md  CONTINUOUS_MODE.md  EMBER_V2_AUDIT.md  EVENT_SCHEMA.md  HANDOVER_SUMMARY.md  HOW_TO_RUN.md  INTEGRATION_NOTES.md  MODEL_DELIVERY.md
models/lightgbm_pe_v1/: feature_config.json  metadata.json  thresholds.json
reference/: Dockerfile.ember-v2  README.md  generate_golden_vectors.py  requirements-ember-v2-reference.txt
src/anti_pe_scanner/: __init__.py  ember_v2_features.py  errors.py  event_builder.py  feature_extractor.py  model_loader.py  pe_validator.py  policy.py  prepared_pe.py  scanner.py  schemas.py  server.py  utils.py  verdict.py
tests/: test_ember_v2_feature_groups.py  test_event_output.py  test_fake_pe.py  test_feature_extractor.py  test_golden_vector_parity.py  test_json_serializable.py  test_missing_file.py  test_model_loading.py  test_non_pe.py  test_optimization_parity.py  test_policy.py  test_prepared_pe.py  test_scanner_single_file.py  test_server_mode.py  test_watch_mode.py
tests/golden/: manifest.json
tools/: benchmark_latency.py  build_exe.py  compare_feature_vectors.py  generate_codebase_pdf.py  scan_file.py  watch_dir.py
